PB4, PB5, PB6, PB7, PB12, PB13, PB14, PB15

--- a/usb_button.ioc
+++ b/usb_button.ioc
@@ -17,17 +17,25 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PA3
-Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin11=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PA15
-Mcu.Pin7=PB3
-Mcu.Pin8=VP_FREERTOS_VS_ENABLE
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=12
+Mcu.Pin10=PA15
+Mcu.Pin11=PB3
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_FREERTOS_VS_ENABLE
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin2=PB12
+Mcu.Pin3=PB13
+Mcu.Pin4=PB14
+Mcu.Pin5=PB15
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=20
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.21.0
@@ -57,8 +65,24 @@ PA3.GPIOParameters=GPIO_PuPd
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Signal=GPIO_Input
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB3.Mode=JTAG_4_pins
 PB3.Signal=SYS_JTDO-TRACESWO
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Speed
 PC13-TAMPER-RTC.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PC13-TAMPER-RTC.Locked=true
